--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@fullcalendar/resource-timeline": "^6.1.15",
     "@fullcalendar/timeline": "^6.1.15",
     "@heroicons/react": "^2.2.0",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
